--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-list": "^1.1.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
