--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-drag-list": "^1.1.0",
     "react-scripts": "5.0.1",
+    "react-sortablejs": "^6.1.4",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
